drop-down scroll-link

--- a/app/index.html
+++ b/app/index.html
@@ -439,5 +439,6 @@
   <!-- modal (end) -->
 
   <script src="./js/main.js"></script>
+  <script src="./js/smothScroll.js"></script>
 </body>
 </html>
